syntax = "proto3";
option csharp_namespace = "FSS.GrpcService";
package fss;

// FSS平台
service FssServer {
    // 建立通道
    rpc Channel (stream ChannelRequest) returns (stream CommandResponse);
    rpc JobInvoke (stream JobInvokeRequest) returns (CommandResponse);
}

// 通道请求
message ChannelRequest {
    // 命令
    string Command = 1;
    // 请求时间
    int64 RequestAt = 2;
    // 数据内容
    string Data = 3;
}

// 通道响应
message CommandResponse {
    // 命令
    string Command = 1;
    // 发送时间
    int64 ResponseAt = 2;
    // 数据内容
    string Data = 3;
}

// 实时同步JOB执行情况
message JobInvokeRequest{
    // 下次执行时间
    int64 NextTimespan = 1;
    // 当前进度
    int32 Progress = 2;
    // 执行状态
    int32 Status = 3;
    // 客户端运行耗时
    int32 RunSpeed = 4;
    // 日志
    LogResponse Log = 5;
    // 客户端要更新的数据
    string Data = 6;
}

message LogResponse {
    // 日志等级
    int32 LogLevel = 1;
    // 日志内容
    string Log = 2;
    // 日志时间
    int64 CreateAt = 3;
}